fix: ai search box dark mode compat

--- a/packages/frontend/src/ee/components/Home/AiSearchBox/SearchDropdown.module.css
+++ b/packages/frontend/src/ee/components/Home/AiSearchBox/SearchDropdown.module.css
@@ -27,6 +27,10 @@
 .comboboxOption[data-combobox-selected] > div {
     background-color: var(--mantine-color-ldGray-0);
     color: inherit;
+
+    @mixin dark {
+        background-color: var(--mantine-color-dark-7);
+    }
 }
 
 .comboboxHeader {
